--- a/sample-apps/blank/package.json
+++ b/sample-apps/blank/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "aws-sdk": "2.585.0"
+    "aws-sdk": "2.585.0",
+    "jest": "^24.7.1"
   },
   "dependencies": {
     "aws-xray-sdk-core": "1.1.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "test": "env AWS_REGION=us-west-2 jest"
   }
 }
