--- a/sample-apps/error-processor/package.json
+++ b/sample-apps/error-processor/package.json
@@ -2,11 +2,11 @@
   "name": "error-processor",
   "version": "1.0.0",
   "private": true,
+  "devDependencies": {
+    "aws-sdk": "2.631.0"
+  },
   "dependencies": {
     "aws-xray-sdk-core": "1.1.2",
     "chance": "1.0.16"
-  },
-  "scripts": {
-    "start": "node app.js"
   }
 }
