--- a/sample-apps/rds-mysql/lib/nodejs/package.json
+++ b/sample-apps/rds-mysql/lib/nodejs/package.json
@@ -6,7 +6,8 @@
     "aws-xray-sdk-core": "2.4.0",
     "aws-xray-sdk-mysql": "2.4.0",
     "md5": "2.2.1",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "mysql2": "2.1.0"
   },
   "scripts": {}
 }
